//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id Int [pk, increment]
  email String [unique, not null]
  nickname String [not null]
  role Role [default: 'Player']
  password String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  roomId Int
  Room Room
  bannerId Int
  Banner Banner
}

Table Room {
  id Int [pk, increment]
  maxPlayers Int [not null]
  status Status [default: 'Waiting']
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  players User [not null]
}

Table Banner {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  imageUrl String [not null]
  isAvailable Boolean [not null, default: true]
  users User [not null]
}

Enum Role {
  SuperAdmin
  Admin
  Mod
  Player
}

Enum Status {
  Waiting
  InProgress
  Finished
}

Ref: User.roomId > Room.id

Ref: User.bannerId > Banner.id